P5 stuff and wasteland

--- a/public/writings/purest-death/index.html
+++ b/public/writings/purest-death/index.html
@@ -196,6 +196,8 @@ invent your own infinities, transform!">
 
 <a href="/about/">About</a>
 
+<a href="/code/">Code</a>
+
 <a href="/writings/">Writings</a>
 
 
