--- a/public/writings/symbols/index.html
+++ b/public/writings/symbols/index.html
@@ -216,6 +216,8 @@ must be tempered with a sense of the sublime">
 
 <a href="/about/">About</a>
 
+<a href="/code/">Code</a>
+
 <a href="/writings/">Writings</a>
 
 
