--- a/public/writings/love-poem/index.html
+++ b/public/writings/love-poem/index.html
@@ -208,6 +208,8 @@ without a calculus accept me whole.">
 
 <a href="/about/">About</a>
 
+<a href="/code/">Code</a>
+
 <a href="/writings/">Writings</a>
 
 
