--- a/public/writings/wasteland/index.html
+++ b/public/writings/wasteland/index.html
@@ -10,8 +10,8 @@
 <meta name="description" content="Wasteland The world ends ruled by rough hard men riding
 on motorcycles across deserts with
 irradiated light bouncing off of chrome,
-waging war to each other with chains and
-diesel, the women bound by hand and fist
+waging war to each other with diesel and
+chains, the women bound by hand and fist
 to do the bidding of their leather clad
 masters, and men muscular at their call
 to hurt or kill for them in brutal ways,
@@ -26,8 +26,8 @@ in cruelty, This is the order that man" />
   <meta property="og:description" content="Wasteland The world ends ruled by rough hard men riding
 on motorcycles across deserts with
 irradiated light bouncing off of chrome,
-waging war to each other with chains and
-diesel, the women bound by hand and fist
+waging war to each other with diesel and
+chains, the women bound by hand and fist
 to do the bidding of their leather clad
 masters, and men muscular at their call
 to hurt or kill for them in brutal ways,
@@ -47,8 +47,8 @@ in cruelty, This is the order that man">
   <meta name="twitter:description" content="Wasteland The world ends ruled by rough hard men riding
 on motorcycles across deserts with
 irradiated light bouncing off of chrome,
-waging war to each other with chains and
-diesel, the women bound by hand and fist
+waging war to each other with diesel and
+chains, the women bound by hand and fist
 to do the bidding of their leather clad
 masters, and men muscular at their call
 to hurt or kill for them in brutal ways,
@@ -62,8 +62,8 @@ in cruelty, This is the order that man">
   <meta itemprop="description" content="Wasteland The world ends ruled by rough hard men riding
 on motorcycles across deserts with
 irradiated light bouncing off of chrome,
-waging war to each other with chains and
-diesel, the women bound by hand and fist
+waging war to each other with diesel and
+chains, the women bound by hand and fist
 to do the bidding of their leather clad
 masters, and men muscular at their call
 to hurt or kill for them in brutal ways,
@@ -226,8 +226,8 @@ in cruelty, This is the order that man">
 <p>The world ends ruled by rough hard men riding<br>
 on motorcycles across deserts with<br>
 irradiated light bouncing off of chrome,<br>
-waging war to each other with chains and<br>
-diesel, the women bound by hand and fist<br>
+waging war to each other with diesel and<br>
+chains, the women bound by hand and fist<br>
 to do the bidding of their leather clad<br>
 masters, and men muscular at their call<br>
 to hurt or kill for them in brutal ways,<br>
