--- a/public/about/index.html
+++ b/public/about/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>About | 🔠</title>
 <meta name="title" content="About" />
-<meta name="description" content="Hi, I&rsquo;m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics." />
+<meta name="description" content="Hi, I&rsquo;m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:url" content="http://localhost:1313/about/">
   <meta property="og:site_name" content="🔠">
   <meta property="og:title" content="About">
-  <meta property="og:description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics.">
+  <meta property="og:description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -23,14 +23,14 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="About">
-  <meta name="twitter:description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics.">
+  <meta name="twitter:description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.">
 
 
 
 
   <meta itemprop="name" content="About">
-  <meta itemprop="description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics.">
-  <meta itemprop="wordCount" content="16">
+  <meta itemprop="description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.">
+  <meta itemprop="wordCount" content="18">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -181,7 +181,7 @@
   <main>
 
 <content>
-  <p>Hi, I&rsquo;m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics.</p>
+  <p>Hi, I&rsquo;m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.</p>
 
 </content>
 <p>
