--- a/public/writings/an-evening-smoke/index.html
+++ b/public/writings/an-evening-smoke/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>An evening smoke | 🔠</title>
-<meta name="title" content="An evening smoke" />
-<meta name="description" content="An evening Smoke wardrobes open deep doors
+<title>An Evening Smoke | 🔠</title>
+<meta name="title" content="An Evening Smoke" />
+<meta name="description" content="An Evening Smoke wardrobes open deep doors
 into shapes unfold, slick black
 sleeves around thin wrists
 rolled back tired, show my tricks,
@@ -20,8 +20,8 @@ grey and green, i lie in dream" />
 
 <meta property="og:url" content="http://localhost:1313/writings/an-evening-smoke/">
   <meta property="og:site_name" content="🔠">
-  <meta property="og:title" content="An evening smoke">
-  <meta property="og:description" content="An evening Smoke wardrobes open deep doors
+  <meta property="og:title" content="An Evening Smoke">
+  <meta property="og:description" content="An Evening Smoke wardrobes open deep doors
 into shapes unfold, slick black
 sleeves around thin wrists
 rolled back tired, show my tricks,
@@ -39,8 +39,8 @@ grey and green, i lie in dream">
 
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="An evening smoke">
-  <meta name="twitter:description" content="An evening Smoke wardrobes open deep doors
+  <meta name="twitter:title" content="An Evening Smoke">
+  <meta name="twitter:description" content="An Evening Smoke wardrobes open deep doors
 into shapes unfold, slick black
 sleeves around thin wrists
 rolled back tired, show my tricks,
@@ -52,8 +52,8 @@ grey and green, i lie in dream">
 
 
 
-  <meta itemprop="name" content="An evening smoke">
-  <meta itemprop="description" content="An evening Smoke wardrobes open deep doors
+  <meta itemprop="name" content="An Evening Smoke">
+  <meta itemprop="description" content="An Evening Smoke wardrobes open deep doors
 into shapes unfold, slick black
 sleeves around thin wrists
 rolled back tired, show my tricks,
@@ -214,7 +214,7 @@ grey and green, i lie in dream">
   <main>
 
 <content>
-  <h1 id="an-evening-smoke">An evening Smoke</h1>
+  <h1 id="an-evening-smoke">An Evening Smoke</h1>
 <p>wardrobes open deep doors<br>
 into shapes unfold, slick black<br>
 sleeves around thin wrists<br>
