--- a/public/writings/index.html
+++ b/public/writings/index.html
@@ -270,7 +270,7 @@
           </time>
         </i>
       </span>
-      <a href="http://localhost:1313/writings/an-evening-smoke/">An evening smoke</a>
+      <a href="http://localhost:1313/writings/an-evening-smoke/">An Evening Smoke</a>
     </li>
     
   </ul>
