--- a/public/writings/cicada-sound/index.html
+++ b/public/writings/cicada-sound/index.html
@@ -127,7 +127,9 @@ my heart entranced with perfect divine sound">
     }
 
     img {
-        max-width: 100%;
+        width: 100%;
+        height: auto;
+        box-shadow: 0px 0px 70px -26px rgba(0,0,0,0.85);
     }
 
     code {
