--- a/public/writings/an-evening-smoke/index.html
+++ b/public/writings/an-evening-smoke/index.html
@@ -127,7 +127,9 @@ grey and green, i lie in dream">
     }
 
     img {
-        max-width: 100%;
+        width: 100%;
+        height: auto;
+        box-shadow: 0px 0px 70px -26px rgba(0,0,0,0.85);
     }
 
     code {
