--- a/public/writings/purest-death/index.html
+++ b/public/writings/purest-death/index.html
@@ -119,7 +119,9 @@ invent your own infinities, transform!">
     }
 
     img {
-        max-width: 100%;
+        width: 100%;
+        height: auto;
+        box-shadow: 0px 0px 70px -26px rgba(0,0,0,0.85);
     }
 
     code {
