--- a/public/writings/summers-end/index.html
+++ b/public/writings/summers-end/index.html
@@ -143,7 +143,9 @@ leave me alone">
     }
 
     img {
-        max-width: 100%;
+        width: 100%;
+        height: auto;
+        box-shadow: 0px 0px 70px -26px rgba(0,0,0,0.85);
     }
 
     code {
