--- a/public/writings/symbols/index.html
+++ b/public/writings/symbols/index.html
@@ -139,7 +139,9 @@ must be tempered with a sense of the sublime">
     }
 
     img {
-        max-width: 100%;
+        width: 100%;
+        height: auto;
+        box-shadow: 0px 0px 70px -26px rgba(0,0,0,0.85);
     }
 
     code {
