--- a/public/writings/wasteland/index.html
+++ b/public/writings/wasteland/index.html
@@ -135,7 +135,9 @@ in cruelty, This is the order that man">
     }
 
     img {
-        max-width: 100%;
+        width: 100%;
+        height: auto;
+        box-shadow: 0px 0px 70px -26px rgba(0,0,0,0.85);
     }
 
     code {
