--- a/public/index.html
+++ b/public/index.html
@@ -206,6 +206,10 @@ Anyway, feel free to explore and you can reach me at msshrivathsa@gmail.com if y
 <br>
 <br>
 <br>
+<img src="/jcb.jpg" alt="&lsquo;jcb&rsquo;">
+<br>
+<br>
+<br>
 <img src="/paperplane.PNG" alt="&lsquo;paperplane&rsquo;">
 <br>
 <br>
