--- a/public/writings/symbols/index.html
+++ b/public/writings/symbols/index.html
@@ -208,6 +208,10 @@ must be tempered with a sense of the sublime">
         color: #8b6fcb;
     }
 </style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
