--- a/public/writings/wasteland/index.html
+++ b/public/writings/wasteland/index.html
@@ -75,8 +75,26 @@ in cruelty, This is the order that man">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
+    .libre-baskerville-regular {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+    }
+
+    .libre-baskerville-bold {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    }
+
+    .libre-baskerville-regular-italic {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: italic;
+    }
+
     body {
-        font-family: Verdana, sans-serif;
+        font-family: "Libre Baskerville", erif;
         margin: auto;
         padding: 20px;
         max-width: 720px;
@@ -204,6 +222,10 @@ in cruelty, This is the order that man">
         color: #8b6fcb;
     }
 </style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
