--- a/public/404.html
+++ b/public/404.html
@@ -33,8 +33,26 @@
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
+    .libre-baskerville-regular {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+    }
+
+    .libre-baskerville-bold {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+    }
+
+    .libre-baskerville-regular-italic {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: italic;
+    }
+
     body {
-        font-family: Verdana, sans-serif;
+        font-family: "Libre Baskerville", erif;
         margin: auto;
         padding: 20px;
         max-width: 720px;
@@ -177,8 +195,6 @@
 <a href="/about/">About</a>
 
 <a href="/code/">Code</a>
-
-<a href="/writings/">Writings</a>
 
 
 </nav>
