--- a/public/writings/another/index.html
+++ b/public/writings/another/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="http://localhost:1313/writings/another/">
+<meta property="og:url" content="https://vthsa.in/writings/another/">
   <meta property="og:site_name" content="🔠">
   <meta property="og:title" content="Another">
   <meta property="og:description" content="Wasteland Despite accounts of mist and haze, detours/ were made to turn inland towards the cove,/ the instruments read true, with heading east/ they cruised till they spotted the yellow coast/ And here the maps promised the cove with still/ under sand buried deep untouched till date/ was the great harbour of El Dorado/ Rumoured hidden within inside was gold,/ enough for all with will and grit to stand/ Posideon’s wrath, and so these men followed/ their maps to now arrive at their final mark/ Their sensors indicate the spot to strike/ with spades, and now being so close, they dig/ quick and they find, to their tired heart’s joy,/ their beliefs come true, their long awaited/ treasure precious at last within their grasp!">
