--- a/public/writings/wasteland/index.html
+++ b/public/writings/wasteland/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@ in cruelty, This is the order that man" />
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="http://localhost:1313/writings/wasteland/">
+<meta property="og:url" content="https://vthsa.in/writings/wasteland/">
   <meta property="og:site_name" content="🔠">
   <meta property="og:title" content="Wasteland">
   <meta property="og:description" content="Wasteland The world ends ruled by rough hard men riding
@@ -237,8 +237,6 @@ in cruelty, This is the order that man">
 <a href="/about/">About</a>
 
 <a href="/code/">Code</a>
-
-<a href="/writings/">Writings</a>
 
 
 </nav>
