--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="http://localhost:1313/about/">
+<meta property="og:url" content="https://vthsa.in/about/">
   <meta property="og:site_name" content="🔠">
   <meta property="og:title" content="About">
   <meta property="og:description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.">
