Added resume and content updates

--- a/public/code/index.html
+++ b/public/code/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Code | 🔠</title>
-<meta name="title" content="Code" />
-<meta name="description" content="Code #1 Cellular Automata in p5
-#2" />
+<title>p5 | 🔠</title>
+<meta name="title" content="p5" />
+<meta name="description" content="p5 #1 Cellular Automata in p5
+#2 Unfinished fluid sim" />
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="https://vthsa.in/code/">
+<meta property="og:url" content="http://localhost:1313/code/">
   <meta property="og:site_name" content="🔠">
-  <meta property="og:title" content="Code">
-  <meta property="og:description" content="Code #1 Cellular Automata in p5
-#2">
+  <meta property="og:title" content="p5">
+  <meta property="og:description" content="p5 #1 Cellular Automata in p5
+#2 Unfinished fluid sim">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -24,17 +24,17 @@
 
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Code">
-  <meta name="twitter:description" content="Code #1 Cellular Automata in p5
-#2">
+  <meta name="twitter:title" content="p5">
+  <meta name="twitter:description" content="p5 #1 Cellular Automata in p5
+#2 Unfinished fluid sim">
 
 
 
 
-  <meta itemprop="name" content="Code">
-  <meta itemprop="description" content="Code #1 Cellular Automata in p5
-#2">
-  <meta itemprop="wordCount" content="7">
+  <meta itemprop="name" content="p5">
+  <meta itemprop="description" content="p5 #1 Cellular Automata in p5
+#2 Unfinished fluid sim">
+  <meta itemprop="wordCount" content="10">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -199,7 +199,7 @@
 
 <a href="/about/">About</a>
 
-<a href="/code/">Code</a>
+<a href="/code/">p5</a>
 
 
 </nav>
@@ -207,9 +207,9 @@
   <main>
 
 <content>
-  <h1 id="code">Code</h1>
+  <h1 id="p5">p5</h1>
 <p><a href="/code/cell/index.html">#1</a> Cellular Automata in p5<br>
-<a href="/code/fluids/index.html">#2</a></p>
+<a href="/code/fluids/index.html">#2</a> Unfinished fluid sim</p>
 
 </content>
 <p>
@@ -220,7 +220,6 @@
   <footer>
 </footer>
 
-    
-</body>
+  </body>
 
 </html>
