--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>About | 🔠</title>
 <meta name="title" content="About" />
-<meta name="description" content="Hi, I&rsquo;m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore." />
+<meta name="description" content="I&rsquo;m a Software Engineer interested in web development and distributed systems. My current stack is React, Next.js, JavaScript/Typescript and Golang. I&rsquo;ve previously worked on autonomy for robots using Python and ROS. I also built a web browser narrative game using the Pixi.js library." />
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="https://vthsa.in/about/">
+<meta property="og:url" content="http://localhost:1313/about/">
   <meta property="og:site_name" content="🔠">
   <meta property="og:title" content="About">
-  <meta property="og:description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.">
+  <meta property="og:description" content="I’m a Software Engineer interested in web development and distributed systems. My current stack is React, Next.js, JavaScript/Typescript and Golang. I’ve previously worked on autonomy for robots using Python and ROS. I also built a web browser narrative game using the Pixi.js library.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
@@ -23,14 +23,14 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="About">
-  <meta name="twitter:description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.">
+  <meta name="twitter:description" content="I’m a Software Engineer interested in web development and distributed systems. My current stack is React, Next.js, JavaScript/Typescript and Golang. I’ve previously worked on autonomy for robots using Python and ROS. I also built a web browser narrative game using the Pixi.js library.">
 
 
 
 
   <meta itemprop="name" content="About">
-  <meta itemprop="description" content="Hi, I’m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.">
-  <meta itemprop="wordCount" content="18">
+  <meta itemprop="description" content="I’m a Software Engineer interested in web development and distributed systems. My current stack is React, Next.js, JavaScript/Typescript and Golang. I’ve previously worked on autonomy for robots using Python and ROS. I also built a web browser narrative game using the Pixi.js library.">
+  <meta itemprop="wordCount" content="43">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -195,7 +195,7 @@
 
 <a href="/about/">About</a>
 
-<a href="/code/">Code</a>
+<a href="/code/">p5</a>
 
 
 </nav>
@@ -203,7 +203,7 @@
   <main>
 
 <content>
-  <p>Hi, I&rsquo;m Vathsa. I like music, computers, writing and hanging out with my favorite local alcoholics in Bangalore.</p>
+  <p>I&rsquo;m a Software Engineer interested in web development and distributed systems. My current stack is React, Next.js, JavaScript/Typescript and Golang. I&rsquo;ve previously worked on autonomy for robots using Python and ROS. I also built a web browser narrative game using the Pixi.js library.</p>
 
 </content>
 <p>
@@ -214,7 +214,11 @@
   <footer>
 </footer>
 
-    
+  
+<div style="display: flex; width: 100%; height: 100%;">
+    <iframe src="/resume-shrivathsa.pdf" style="width: 100%; min-height: 100vh">
+    </iframe>
+</div>
 </body>
 
 </html>
